--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="css/style.css">
@@ -32,7 +32,7 @@
       </div>
     </div>
 
-    <div class="data-remain u-border-radius"><span class="data-remain--left">185</span>gb left</div>
+    
 
     <div class="data-bar u-padding">
       <p class="u-margin-bottom">You&apos; ve used <span class="data-bar--usage">815 GB</span> of your storage</p>
@@ -43,7 +43,9 @@
           <span>1000 gb</span>
         </div>
       </div>
+      <div class="data-remain u-border-radius"><span class="data-remain--left">185</span>gb left</div>
     </div>
   </div>
+ 
 </body>
 </html>
